# lup-rust-vue

./: .gitignore  Procfile  README.md  Rocket.toml  bookworm.sql  rust-toolchain
server/: Cargo.toml
src/: main.rs
webui/: README.md  package-lock.json  package.json
webui/service/: api.factory.js  dataService.js
